# hashnote

./: README.md  index.html  package-lock.json  package.json  popup.html  vite.config.js
electron/: main.js
public/: icon.icns  splash.html
src/: App.jsx  github-activity.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AboutButton.jsx  Bottombar.jsx  GitHubActivity.jsx  MarkdownEditor.jsx  SettingsMenu.jsx  ShowCase.jsx  Topbar.jsx
src/context/: FoldersContext.jsx  FoldersProvider.jsx  FunctionsProvider.jsx  GithubProvider.jsx  context.js
src/utils/: dates.js  handlers.js  readDataFromFile.js
